--- a/ControleDeContatos/Views/Contato/ApagarConfirmacao.cshtml
+++ b/ControleDeContatos/Views/Contato/ApagarConfirmacao.cshtml
@@ -6,5 +6,5 @@
     <h3>Realmente deseja apagar o contato?</h3>
 </div>
 
-<a class="btn btn-primary" role="button">Cancelar exclusão</a>
-<a class="btn btn-danger" role="button">Confirmar exclusão</a>
+<a class="btn btn-primary" role="button" asp-controller="Contato" asp-action="Index">Cancelar exclusão</a>
+<a class="btn btn-danger" role="button" asp-controller="Contato" asp-action="ApagarContato">Confirmar exclusão</a>
