--- a/ControleDeContatos/Views/Contato/CriarContato.cshtml
+++ b/ControleDeContatos/Views/Contato/CriarContato.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model ContatoModel
+
+@{
     ViewData["Title"] = "Criar Contato";
 }
 
@@ -6,20 +8,21 @@
     <h1 class="display-4">Cadastrar contato</h1>
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Criar" method="post">
+
     <div class="form-group">
         <label for="nomeUsuario">Nome</label>
-        <input type="text" class="form-control"placeholder="Digite o nome do contato">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do contato">
     </div>
     <br />
     <div class="form-group">
         <label for="emailUsuario">E-mail</label>
-        <input type="text" class="form-control" placeholder="Digite o e-mail do contato">
+        <input type="text" asp-for="Email" class="form-control" placeholder="Digite o e-mail do contato">
     </div>
     <br />
     <div class="form-group">
         <label for="celularUsuario">Celular</label>
-        <input type="text" class="form-control" placeholder="Digite o celular do contato">
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do contato">
     </div>
     <br />
 
